--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Beta2
	- Fixed Recently played so that it correctly shows unique songs
		with the correct data
	- Fix some issues with filenames with Multi-byte characters 
		(Thx Momo-i)
	- Add WMV/MPG specific parsing functions (Thx Momo-i)
	- Add text to /test.php for hash() and SHA256() support under PHP
		section
	- Fix SHA256 Support so that it references something that exists
	- Fix incorrect debug_event() on login due to typo
	- Remove manage democratic playlist as it has no meaning in the 
		current version
	- Run Dba::reset_db_charset() after upgrade incase people are playing
		hot potato with their charsets. 
	- Move Server Preferences to Admin menu (Thx geekdawg)
	- Fixed missing web_path reference on radio creation link
	- Fixed remote catalog_clean doesn't work
	- Fixed xmlrpc get image. getEncoding doesn't static function


--------------------------------------------------------------------------
  v.3.5-Beta1 03/15/2009
	- Add democratic methods to api, can now vote, devote, get url
		and the current democratic playlist through the api
	- Revert to old Random Play method
	- Added proxy use for xmlrpcclient
	- Added Configuration 'Wizard' for democratic play
	- Fixed interface feedback issues with democratic play actions
	- Add extension to image urls for the API will add to others as
		needed due to additional query requirement. Needed to fix
		some DLNA devices
	- Fixed typo that caused the height of album art not to display
	- Modified database and added GC for tmp_browse table
	- Added get lyrics and album art using http proxy server #313 
		+ username, password patch
	- Added lyricswiki link Ticket #70
	- Updated README language