@@ -96,8 +96,7 @@
 			$object = new $type(array_shift($object_data)); 
 			$object->format(); 
 		} 
-		elseif ($type == Random::validate_type($type)) { 
-			$object = new Random(); 
+		if ($type == 'random') { 
 			$object->f_link = Random::get_type_name($type); 	
 		} 
 ?>
